<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fondeu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/sty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/whereIsMyBaln" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/sty_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haveAccount" />

                <Button
                    android:id="@+id/btn_login1"
                    style="@style/sty_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/letsGo"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

                <TextView
                    style="@style/sty_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/notAccount" />

                <Button
                    android:id="@+id/btn_signup1"
                    style="@style/sty_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinUs"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>